feat: Refactor response handling in controllers and update custom field definitions